--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 /*style.css*/
-
 body{
-	background: url(img\background.png);
+	background: url(../img/background.png);
 }
 header{
 	padding-top: 100px; padding-bottom:50px
