--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,13 @@
 body{
 	background: url(../img/background.png);
 }
+input{
+	outline:none
+}
 header{
-	padding-top: 100px; padding-bottom:50px
+	padding-top: 100px; 
+	padding-bottom:50px;
+}
+.img-center{
+	margin: 0 auto;
 }
