--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,12 @@ input{
 	outline:none
 }
 header{
-	padding-top: 100px; 
-	padding-bottom:50px;
+	padding-top: 80px; 
+	padding-bottom:35px;
 }
 .img-center{
 	margin: 0 auto;
+}
+.navbar-padding-left{
+	padding-left: 10px;
 }
