--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,11 @@ ul > .about{
 li > .about{
 
 }
+@keyframes fade_out {
+	from{opacity: 1;}
+	to{opacity: 0;}
+}
+@keyframes fade_in {
+	from{opacity: 0;}
+	to{opacity: 1;}
+}
